--- a/b2b_ecommerce/static/description/index.html
+++ b/b2b_ecommerce/static/description/index.html
@@ -47,7 +47,7 @@
         <h2 class="oe_slogan" style="color:#004a81;">Help and Support</h2>
         <h4 class="oe_slogan" style="color:#004a81;">For support, new features and customizations.</h4>
         <div class="oe_slogan">
-            <img class="center-block" src="tis-logo.png" width="250">
+            <img class="center-block" src="tis-logo.png" width="250"><br/>
             <a class="btn btn-primary btn-lg mt8"
                style="color: #FFFFFF !important;" href="http://www.technaureus.com/" target="_blank">
                 <i class="fa fa-globe"></i> Website </a>
