--- a/b2b_ecommerce/static/description/index.html
+++ b/b2b_ecommerce/static/description/index.html
@@ -33,10 +33,20 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <h3 class="oe_slogan">Product detail page when we hide price, 'add to cart' button and guarantee text
-        when we hide each respectively for not logged-in users</h3>
+            when we hide each respectively for not logged-in users</h3>
         <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
                 <img src="b2b3.png">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="oe_container">
+    <div class="oe_row oe_spaced">
+        <h3 class="oe_slogan">Wishlist page when we hide price for not logged-in users</h3>
+        <div class="oe_span12">
+            <div class="oe_demo oe_picture oe_screenshot">
+                <img src="wishlist.png">
             </div>
         </div>
     </div>
